--- a/package.json
+++ b/package.json
@@ -58,5 +58,5 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26"
   },
-  "homepage": "https://github.com/meowTarae/study-react"
+  "homepage": "https://meowTarae.github.io/study-react"
 }
